--- a/src/components/afterSignUpPage/afterSignUpPage.scss
+++ b/src/components/afterSignUpPage/afterSignUpPage.scss
@@ -51,3 +51,25 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px){
+    .afterSignUpPage__Container{
+        height: 90vh;
+    
+        .afterSignUpPage{
+            width: 300px;
+        
+    
+            .signIn__heading{
+                font-size: 12px;
+            }
+    
+            form{
+    
+                input{
+                    width: 200px;
+                }
+            }
+      }
+    }
+}
